--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.4.4"
+    "@next/bundle-analyzer": "^13.4.4",
+    "prettier": "^2.8.8"
   }
 }
