--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -30,7 +31,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
-    "react-icons": "^4.9.0",
     "react-markdown": "^8.0.7",
     "react-markdown-editor-lite": "^1.3.4",
     "rehype-slug": "^5.1.0",
