--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
+    "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
     "react-markdown-editor-lite": "^1.3.4",
     "rehype-slug": "^5.1.0",
