--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,9 @@
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
     "react-markdown-editor-lite": "^1.3.4",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-slug": "^5.1.0",
+    "remark-emoji": "^3.1.2",
     "remark-gfm": "^3.0.1",
     "remark-toc": "^8.0.1",
     "swr": "^2.1.5",
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.4",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "prettier": "^2.8.8"
   }
 }
