--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
+    "connect-redis": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
@@ -52,6 +53,7 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.7",
     "sharp": "^0.32.0",
     "validate-image-type": "^2.0.0",
     "yup": "^1.0.2"
